fix missing space after image slider

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -397,3 +397,11 @@
     font-size: 12px;
   }
 }
+
+
+// add a margin after image slider
+// and other things
+.ideal-image-slider {
+  margin-bottom: 30px;
+  box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+}
